@@ -50,6 +50,9 @@ RELEASE 0.96.96 - XXX
 
   - Fix use of custom include and lib paths with Visual Studio 8.
 
+  - Select the default .NET Framework SDK Dir based on the version of
+    Visual Studio being used.
+
 
 
 RELEASE 0.96.95 - Mon, 12 Feb 2007 20:25:16 -0600
